Closed Bug 1657205 Opened 5 years ago Closed 5 years ago

Crash in [@ OOM | large | mozalloc_abort | moz_xmalloc | mozilla::CacheAwareZipReader::PutBufferIntoCache]

Categories

(Core :: XPCOM, defect)

80 Branch
All
Windows
defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox79 --- unaffected
firefox80 --- fixed
firefox81 --- fixed

People

(Reporter: philipp, Assigned: alexical)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-353e9000-5e2c-4bdd-917d-dd24b0200804.

Top 10 frames of crashing thread:

0 mozglue.dll mozalloc_abort memory/mozalloc/mozalloc_abort.cpp:33
1 mozglue.dll mozalloc_handle_oom memory/mozalloc/mozalloc_oom.cpp:51
2 mozglue.dll moz_xmalloc memory/mozalloc/mozalloc.cpp:54
3 xul.dll static mozilla::CacheAwareZipReader::PutBufferIntoCache xpcom/build/Omnijar.cpp:441
4 xul.dll mozilla::CacheAwareZipHandle::ReleaseHandle xpcom/build/Omnijar.cpp:474
5 xul.dll nsJARInputStream::Read modules/libjar/nsJARInputStream.cpp:241
6 xul.dll `anonymous namespace'::VerifyAppManifest security/apps/AppSignatureVerification.cpp:943
7 xul.dll `anonymous namespace'::VerifyPK7Signature security/apps/AppSignatureVerification.cpp:1211
8 xul.dll `anonymous namespace'::OpenSignedAppFileTask::CalculateResult security/apps/AppSignatureVerification.cpp:1331
9 xul.dll mozilla::CryptoTask::Run security/manager/ssl/CryptoTask.cpp:34

these out of memory crash reports on windows are new in firefox 80 (similar to what was fixed in bug 1652140 but still continuing to crash in beta).

Hey Doug, is this something you could fix or find an owner for?

Flags: needinfo?(dothayer)

The allocations are around a meg or so, which doesn't seem super large.

This crash has some memory report info in it: bp-1497b9f9-f18a-4e95-a2a3-723ee0200803

It all looks quite normal, though I don't see information on the page file, and what I usually see on OOM crashes nowadays is very low page file.

Assignee: nobody → dothayer
Flags: needinfo?(dothayer)

This changes the StartupCache::PutBuffer call from Omnijar to use a
fallibly allocated buffer, to reduce OOM crashes. We can/should broaden the
scope of this, but this is a simple initial change to mitigate the OOM
crashed introduced with bug 1627075.

Pushed by dothayer@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/abcb98a505f6 Fallibly allocate for StartupCache from Omnijar r=froydnj
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch

The patch landed in nightly and beta is affected.
:dthayer, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(dothayer)

Comment on attachment 9168268 [details]
Bug 1657205 - Fallibly allocate for StartupCache from Omnijar r?froydnj

Beta/Release Uplift Approval Request

  • User impact if declined: Potential increase in OOM crashes. However it's unclear whether the browser would crash due to OOM anyway somewhere else.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It takes an allocation that was infallible but didn't need to be (because what we allocate is not essential to the operation of the browser), and makes it fallible. This is a very small change and its only behavioral change should be the browser not crashing in this particular place.
  • String changes made/needed:
Flags: needinfo?(dothayer)
Attachment #9168268 - Flags: approval-mozilla-beta?

Comment on attachment 9168268 [details]
Bug 1657205 - Fallibly allocate for StartupCache from Omnijar r?froydnj

approved for 80.0b8

Attachment #9168268 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: