Bug 1657205 - Fallibly allocate for StartupCache from Omnijar r=froydnj

This changes the StartupCache::PutBuffer call from Omnijar to use a
fallibly allocated buffer, to reduce OOM crashes. We can/should broaden the
scope of this, but this is a simple initial change to mitigate the OOM
crashed introduced with bug 1627075.

Differential Revision: https://phabricator.services.mozilla.com/D86067